Added code for writing predictions in sample.csv format

--- a/Project/initregressor.ipynb
+++ b/Project/initregressor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -88,16 +88,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "degree = 1\tMAE=12.3166325529\n",
-      "degree = 2\tMAE=12.2175907436\n",
-      "degree = 3\tMAE=12.3243548157\n",
-      "degree = 4\tMAE=12.6855512811\n",
-      "degree = 5\tMAE=12.6746865471\n",
-      "degree = 6\tMAE=12.6560135662\n",
-      "degree = 7\tMAE=27.4574193692\n",
-      "degree = 8\tMAE=13.2430456557\n",
-      "degree = 9\tMAE=13.2569379876\n",
-      "degree = 10\tMAE=13.3642995527\n",
+      "degree = 1\tMAE=12.1009173524\n",
+      "degree = 2\tMAE=12.0096973902\n",
+      "degree = 3\tMAE=12.1286066428\n",
+      "degree = 4\tMAE=12.4790431\n",
+      "degree = 5\tMAE=12.4640253538\n",
+      "degree = 6\tMAE=12.4689530508\n",
+      "degree = 7\tMAE=25.8272890344\n",
+      "degree = 8\tMAE=13.0127172817\n",
+      "degree = 9\tMAE=13.0698694111\n",
+      "degree = 10\tMAE=13.1181202985\n",
       "2\n"
      ]
     }
@@ -119,6 +119,165 @@
     "        bestdeg = d\n",
     "\n",
     "print bestdeg "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fnames = [x for x in sorted(os.listdir('./test_set/DesignMatrices/')) if x[0]!='.']\n",
+    "for fname in fnames: \n",
+    "    Xtestpd = pd.read_csv('./test_set/DesignMatrices/'+fname)\n",
+    "    Xtest = Xtestpd[['RegionID', 'Timeslot']].values\n",
+    "    \n",
+    "    Ytest = bestmodel.predict(PolynomialFeatures(degree=bestdeg).fit_transform(Xtest))\n",
+    "    \n",
+    "    myout = pd.DataFrame(Ytest, columns=['gap'])\n",
+    "    myout['district_date_slot'] = Xtestpd['RegionHash']\n",
+    "    #myout['date'] = fname.split('.')[0]\n",
+    "    #myout\n",
+    "    myout['district_date_slot'] = myout.district_date_slot.astype(str).str.cat(Xtestpd.Date.astype(str), sep='_')\n",
+    "    myout['district_date_slot'] = myout.district_date_slot.astype(str).str.cat(Xtestpd.Timeslot.astype(str), sep='-')\n",
+    "    myout=myout.set_index('district_date_slot')\n",
+    "    \n",
+    "    kaggleout = pd.read_csv('sample.csv', index_col='district_date_slot')\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gap</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>district_date_slot</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>90c5a34f06ac86aee0fd70e2adce7d8a_2016-01-23-1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f2c8c4bb99e6377d21de71275afd6cd2_2016-01-23-1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58c7a4888306d8ff3a641d1c0feccbe3_2016-01-23-1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b26a240205c852804ff8758628c0a86a_2016-01-23-1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4b9e4cf2fbdc8281b8a1f9f12b80ce4d_2016-01-23-1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               gap\n",
+       "district_date_slot                                \n",
+       "90c5a34f06ac86aee0fd70e2adce7d8a_2016-01-23-1    0\n",
+       "f2c8c4bb99e6377d21de71275afd6cd2_2016-01-23-1    0\n",
+       "58c7a4888306d8ff3a641d1c0feccbe3_2016-01-23-1    0\n",
+       "b26a240205c852804ff8758628c0a86a_2016-01-23-1    0\n",
+       "4b9e4cf2fbdc8281b8a1f9f12b80ce4d_2016-01-23-1    0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kaggleout.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gap</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>district_date_slot</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>d4ec2125aff74eded207d2d915ef682f_2016-01-23-45</th>\n",
+       "      <td>8.900349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2407d482f0ffa22a947068f2551fe62c_2016-01-23-79</th>\n",
+       "      <td>11.505251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b26a240205c852804ff8758628c0a86a_2016-01-23-93</th>\n",
+       "      <td>8.866418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4725c39a5e5f4c188d382da3910b3f3f_2016-01-23-103</th>\n",
+       "      <td>10.232886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dd8d3b9665536d6e05b29c2648c0e69a_2016-01-23-115</th>\n",
+       "      <td>8.145178</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                       gap\n",
+       "district_date_slot                                        \n",
+       "d4ec2125aff74eded207d2d915ef682f_2016-01-23-45    8.900349\n",
+       "2407d482f0ffa22a947068f2551fe62c_2016-01-23-79   11.505251\n",
+       "b26a240205c852804ff8758628c0a86a_2016-01-23-93    8.866418\n",
+       "4725c39a5e5f4c188d382da3910b3f3f_2016-01-23-103  10.232886\n",
+       "dd8d3b9665536d6e05b29c2648c0e69a_2016-01-23-115   8.145178"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myout.head()"
    ]
   },
   {
