--- a/Project/model1.ipynb
+++ b/Project/model1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -10,10 +10,10 @@
     {
      "data": {
       "text/plain": [
-       "<module 'utils' from 'utils.py'>"
+       "<module 'utils' from 'utils.pyc'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -78,19 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "enc=OneHotEncoder(sparse=False)\n",
-    "t=enc.fit_transform(Xtrain[:,0][np.newaxis])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +95,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isnan(Xnp[:,2]).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -128,14 +138,14 @@
       "text/plain": [
        "array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
        "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  1., ...,  0.,  0.,  0.],\n",
        "       ..., \n",
-       "       [ 0.,  1.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
        "       [ 0.,  0.,  1., ...,  0.,  0.,  0.],\n",
        "       [ 0.,  1.,  0., ...,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -175,16 +185,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "degree = 1, score = 10.6658657092, score2 = 10.8194350197\n",
-      "degree = 2, score = 10.973862876, score2 = 11.1300080548\n",
-      "degree = 3, score = 398.852721478, score2 = 398.61904637\n",
-      "degree = 4, score = 7922105.03513, score2 = 7906941.63005\n",
-      "degree = 5, score = 94022567396.5, score2 = 93790076209.0\n",
-      "degree = 6, score = 1.64002121399e+14, score2 = 1.63517807995e+14\n",
-      "degree = 7, score = 4.64241113145e+18, score2 = 4.62517096628e+18\n",
-      "degree = 8, score = 1.17526473999e+23, score2 = 1.16971190753e+23\n",
-      "degree = 9, score = 1.35357585623e+23, score2 = 1.34559823102e+23\n",
-      "degree = 10, score = 2.05813413122e+22, score2 = 2.04369131335e+22\n"
+      "degree = 1, score = 10.7523501303, score2 = 10.7111965451\n",
+      "degree = 2, score = 11.0813239474, score2 = 11.0410598427\n",
+      "degree = 3, score = 284.328341849, score2 = 285.082318582\n",
+      "degree = 4, score = 7863501.4205, score2 = 7884879.73189\n",
+      "degree = 5, score = 1.26470215261e+11, score2 = 1.2689547166e+11\n",
+      "degree = 6, score = 1.87912088503e+15, score2 = 1.88640458331e+15\n",
+      "degree = 7, score = 2.19925240518e+19, score2 = 2.20816071115e+19\n",
+      "degree = 8, score = 6.05968394822e+23, score2 = 6.08320121343e+23\n",
+      "degree = 9, score = 1.2875881378e+23, score2 = 1.29199425008e+23\n",
+      "degree = 10, score = 5.00225838723e+22, score2 = 5.01735387898e+22\n"
      ]
     }
    ],
@@ -212,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -221,26 +231,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 51.  45.  nan]\n",
-      " [ 28.  44.  nan]\n",
-      " [ 28.  44.  nan]\n",
-      " ..., \n",
-      " [ 46.  44.  nan]\n",
-      " [ 46.  44.  nan]\n",
-      " [  8.  43.   4.]]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index -2147483648 is out of bounds for axis 0 with size 10",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-68-315a2853f763>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mXtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mXtestpd\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'RegionID'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Timeslot'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Weather'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mXtest\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mXtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmyTransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mXtest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbestdeg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mypreds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbestmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mXtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-58-507746dcfe77>\u001b[0m in \u001b[0;36mmyTransform\u001b[0;34m(X, d)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[1;34m\"\"\"One-hot-encodes region number and weather, while raises timeslot to degree d\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mone_hot_encode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mn_classes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m67\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mone_hot_encode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mn_classes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnewaxis\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPolynomialFeatures\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdegree\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-54-d650bd565c60>\u001b[0m in \u001b[0;36mone_hot_encode\u001b[0;34m(x, n_classes)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[1;33m:\u001b[0m \u001b[1;32mreturn\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mNumpy\u001b[0m \u001b[0marray\u001b[0m \u001b[0mof\u001b[0m \u001b[0mone\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mhot\u001b[0m \u001b[0mencoded\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m      \"\"\"\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meye\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_classes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: index -2147483648 is out of bounds for axis 0 with size 10"
+      "[ 43.  44.  45.]\n",
+      "[]\n",
+      "[ 43.  44.  45.]\n",
+      "[]\n",
+      "[ 43.  44.  45.]\n"
      ]
     }
    ],
@@ -252,13 +247,12 @@
     "    Xtestpd = Xtestpd[Xtestpd.Timeslot <= 51]\n",
     "    \n",
     "    Xtest = Xtestpd[['RegionID','Timeslot', 'Weather']].values\n",
-    "    print Xtest\n",
-    "    Xtest = myTransform(Xtest.astype(int), bestdeg)\n",
+    "    print np.unique(Xtest[:,1])\n",
+    "    #Xtest = myTransform(Xtest.astype(int), bestdeg)\n",
     "    \n",
-    "    ypreds = bestmodel.predict(Xtest)\n",
+    "    #ypreds = bestmodel.predict(Xtest)\n",
     "    \n",
-    "    utils.WriteOnKaggleFormat(Xtestpd, ypreds, fname.split('.')[0])\n",
-    "    break "
+    "    #utils.WriteOnKaggleFormat(Xtestpd, ypreds, fname.split('.')[0])"
    ]
   },
   {
